<resources>
    <string name="app_name">Arkantos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gameCoverArt">GameCoverArt</string>
    <string name="api_status">Api Status</string>
    <string name="summary">Summary:</string>
    <string name="storyline">Storyline:</string>
    <string name="go_to_all_genre">Go to All genre</string>
    <string name="adventure_games">Adventure Games</string>
    <string name="view_all">View All</string>
    <string name="rpg_games">RPG Games</string>
    <string name="show_all_games">Show All Games</string>
    <string name="real_time_strategy_games">RTS Games</string>
    <string name="shooter_games">Shooter Games</string>
    <string name="racing_games">Racing Games</string>
    <string name="fighting_games">Fighting Games</string>
    <string name="move_to_login">Move to Login</string>
    <string name="all_games">All Games</string>
    <string name="favorite_games">Favorite Games</string>
    <string name="sign_out">Sign Out</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">639111953455797</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb639111953455797</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>